Remove userchatscontext as it was not neccessary, when one user clicks on found user the currentuser's chat is not appearing on clicked user's side until refresh, this bug has to be fixed, (DEPLOYING THIS VERSION WON'T WORK PROPERLY), fix image appearing huge in search.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# Other files
+/public
+.firebase
+.firebaserc
+firebase.json
+firestore.indexes.json
+firestore.rules
+storage.rules
