--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "gulp": "gulp"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "firebase": "^10.5.2",
     "gulp": "^4.0.2",
     "gulp-purgecss": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
