--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "compressorjs": "^1.2.1",
     "firebase": "^10.5.2",
     "gulp": "^4.0.2",
     "gulp-purgecss": "^5.0.0",
